# kernel-startup-code

./: Makefile  README.md  meson.build
arch/x86/: linker.ld  meson.build
arch/x86/include/: uart.h
arch/x86/src/: multiboot.S  start.S  uart.c
kernel/: meson.build
kernel/src/: main.c
script/: boot.py
toolchain/: x86-none-elf.ini
